GNOME Bugzilla – Bug 790802
lib: Fix unknown device types not having icons
Last modified: 2017-11-26 16:17:29 UTC
.
Created attachment 364355 [details] [review] lib: Fix unknown device types not having icons
Review of attachment 364355 [details] [review]: Seems like a good idea.
(In reply to Benjamin Berg from comment #2) > Review of attachment 364355 [details] [review] [review]: > > Seems like a good idea. I saw this with a Surface Pen: readonly q Appearance = 967; Which should appear as a pen (bug 789105)
Attachment 364355 [details] pushed as 5e6d109 - lib: Fix unknown device types not having icons