lib: Fix unknown device types not having icons

https://bugzilla.gnome.org/show_bug.cgi?id=790802